# cmsmc

./: .dockerignore  .envrc  .gitignore  .gitignore.swp  .pre-commit-config.yaml  Dockerfile  README.md  cmsmc.nginx  compose-example.yaml  compose.yaml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  requirements.in  requirements.txt
assets/: package-lock.json  package.json  vite.config.js
assets/src/: frames.js  main.js  style.css
assets/src/css/: archive-list.css  base.css  blog-post.css  buttons.css  comp-archive.css  comp-figure.css  comp-footnotes.css  comp-hgroup.css  comp-lists.css  comp-table.css  figure.css  font-face.css  forms-inputs.css  forms.css  header-footer.css  layouts.css  normalize.css  site-footer.css  site-header.css  typography.css  variables.css
cmsmc/: .env-template  entrypoint.sh  manage.py
cmsmc/assets/: package-lock.json  package.json  webpack.config.js
cmsmc/assets/css/: _archive.css  _blog-post.css  _chart.css  _figure.css  _footnotes.css  _header-footer.css  _lists.css  _reset.css  _root.css  _symbols.css  _table.css  _utils.css  main.css
cmsmc/assets/js/: council.js  framed.js  index.js  now.js
cmsmc/blog/: admin.py  forms.py  models.py  urls.py  views.py
cmsmc/blog/migrations/: 0001_initial.py  (+4 more)
cmsmc/cmsmc/: asgi.py  settings.py  test.py  urls.py  wsgi.py
cmsmc/pages/: models.py  urls.py  views.py
cmsmc/qs/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
cmsmc/static/: frames.js  main.css
cmsmc/templates/: 404.html  500.html  base.html  index.html  style.html  symbols.html
(+27 files in other folders)
