[project]
name = "cmsmc-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "markdown-del-ins>=1.0.0",
    "markdown-mark>=0.0.1",
    "markdown-sub-sup>=0.0.3",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=5.2.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.4",
]
